# github_action_pr_push

./: README.md  pyproject.toml
.github/workflows/: ci.yml  scheduled.yml
src/gh_actions_demo/: __init__.py  cli.py  core.py
tests/: test_cli.py  test_core.py
